--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -5,7 +5,7 @@
 }
 
 .footer {
-    background-color: #01579b;
+    background-color: #1564bf;
     width: 100%;
     position: relative;
     height: 45px;
