--- a/src/app/components/almacen/almacen-dialog/almacen-dialog.component.html
+++ b/src/app/components/almacen/almacen-dialog/almacen-dialog.component.html
@@ -1,4 +1,4 @@
-<p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="10000" [draggable]="false" [resizable]="false">
+<p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="2" [draggable]="false" [resizable]="false" [closable]="false">
     <ng-template pTemplate="header">
         <h3 class="titulo-h3">
             <i class="pi pi-list "></i> AGREGAR PRODUCTO
@@ -6,7 +6,7 @@
     </ng-template>
     <div class="form">
         <form name="form" id="form" novalidate autocomplete="off" #form="ngForm">
-            <div class="form-row">
+            <div class="row">
                 <div class="col-md-6">
                     <div class="form-group ">
                         <label for="fecha" class="form-label">Fecha</label>
@@ -26,32 +26,48 @@
                   </small>
                 </div>
             </div>
-            <div class="form-row">
+            <div class="row">
                 <div class="form-group col-md-6">
                     <label for="tipo" class="form-label">Tipo extintor</label>
                     <select class="form-control" name="tipo" id="tipo" [disabled]="tipoExt?.length === 0" [class.is-invalid]="tipo.invalid && tipo.touched" [(ngModel)]="inventariado.tipo" #tipo="ngModel" required>
-                <option *ngFor="let item2 of tipoExt" [value]="item2.id">{{item2.tipo_Extintor}} </option>
-                </select>
+                    <option *ngFor="let item2 of tipoExt" [value]="item2.tipo_Extintor">{{item2.tipo_Extintor}} </option>
+                    </select>
                     <small *ngIf="tipo.invalid && tipo.touched" class="form-text text-danger">
-                  Este campo es obligatorio
-                </small>
+                     Este campo es obligatorio
+                    </small>
                 </div>
-
-                <div class="form-group col-md-4">
-                    <label for="peso" class="form-label">Peso</label>
-                    <select id="peso" class="form-control">
-                      <option selected>Seleccionar...</option>
-                      <option>...</option>
-                       </select>
+                <div class="form-group col-md-6">
+                    <label for="pesoXlibras" class="form-label">Peso extintor</label>
+                    <select class="form-control" name="pesoXlibras" id="pesoXlibras" [disabled]="pesoExt?.length === 0" [class.is-invalid]="pesoXlibras.invalid && pesoXlibras.touched" [(ngModel)]="inventariado.pesoXlibras" #pesoXlibras="ngModel" required>
+                    <option *ngFor="let item2 of pesoExt" [value]="item2.pesoXlibras">{{item2.pesoXlibras}} </option>
+                    </select>
+                    <small *ngIf="pesoXlibras.invalid && pesoXlibras.touched" class="form-text text-danger">
+                     Este campo es obligatorio
+                    </small>
                 </div>
-                <div class="form-group col-md-4">
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
                     <label for="cantidad" class="form-label">Cantidad</label>
-                    <input type="number" class="form-control" id="cantidad">
+                    <input class="form-control" type="number" name="cantidad" id="cantidad" [class.is-invalid]="cantidad. invalid && cantidad.touched" [(ngModel)]="inventariado.cantidad" #cantidad="ngModel" required>
+                    <small *ngIf="cantidad.invalid && cantidad.touched" class="form-text text-danger">
+                    Este campo es obligatorio
+                    </small>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="fechaV" class="form-label">Fecha V</label>
+                    <input class="form-control" type="date" name="fechaVencimiento" id="fechaV" [class.is-invalid]="fechaVencimiento. invalid && fechaVencimiento.touched" [(ngModel)]="inventariado.fechaVencimiento" #fechaVencimiento="ngModel" required>
+                    <small *ngIf="fechaVencimiento.invalid && fechaVencimiento.touched" class="form-text text-danger">
+                    Este campo es obligatorio
+                    </small>
                 </div>
             </div>
         </form>
     </div>
     <p-footer>
-        <p-button icon="pi pi-save" label="Guardar" styleClass="p-button-primary"></p-button>
+        <p-button (click)="alamcenarInventario(form)" type="button" icon="pi pi-save" label="Guardar" styleClass="p-button-primary" [disabled]="form.invalid"></p-button>
+        <p-button type="button" (click)="cerrarDialog(form)" icon="pi pi-times" label="Cancelar" styleClass="p-button-secondary"></p-button>
     </p-footer>
 </p-dialog>
+
+<p-toast [style]="{width: '80vw'}"></p-toast>
