--- a/src/app/components/almacen/almacen.component.css
+++ b/src/app/components/almacen/almacen.component.css
@@ -1,198 +1,203 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+ * {
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+ }
 
-.contenedor-dos {
-    margin-top: -10px;
-    margin-bottom: 10px;
-}
+ .contenedor-dos {
+     margin-top: -10px;
+     margin-bottom: 10px;
+ }
 
-.titulo-prin {
-    text-transform: uppercase;
-    margin-top: 0px;
-    margin-left: 15px;
-}
+ .titulo-prin {
+     text-transform: uppercase;
+     margin-top: 0px;
+     margin-left: 15px;
+ }
 
-.btn-emple {
-    width: 170px;
-    height: 30px;
-    margin-left: 15px;
-    font-size: 13px;
-    color: #ffffff;
-    text-transform: uppercase;
-}
+ .btn-emple {
+     width: 170px;
+     height: 30px;
+     margin-left: 15px;
+     font-size: 13px;
+     color: #ffffff;
+     text-transform: uppercase;
+ }
 
-.icono-btn {
-    font-size: 13px;
-    margin-right: 6px;
-}
+ .icono-btn {
+     font-size: 13px;
+     margin-right: 6px;
+ }
+ /* estilos buscador */
 
+ .abc {
+     margin-right: 15px;
+ }
 
-/* estilos buscador */
+ .div-boton {
+     margin-left: 5px;
+ }
 
-.abc {
-    margin-right: 15px;
-}
+ .imput-buscar {
+     height: 30px;
+     padding-left: 10px;
+ }
 
-.div-boton {
-    margin-left: 5px;
-}
+ .boton-buscar {
+     width: 70px;
+     height: 30px;
+     color: #ffffff;
+ }
 
-.imput-buscar {
-    height: 30px;
-    padding-left: 10px;
-}
+ ::placeholder {
+     padding-left: 5px;
+     color: rgb(163, 159, 159);
+ }
+ /* estilos tabla */
 
-.boton-buscar {
-    width: 70px;
-    height: 30px;
-    color: #ffffff;
-}
+ .card {
+     display: flex;
+     margin-top: 10px;
+     margin-left: 15px;
+     margin-right: 15px;
+     border-left: 0;
+     border-right: 0;
+     border-top: 0;
+     margin-bottom: 10px;
+ }
 
-::placeholder {
-    padding-left: 5px;
-    color: rgb(163, 159, 159);
-}
+ .icono-table {
+     width: 25px;
+     height: 25px;
+     margin-right: 16px;
+     text-align: center;
+     line-height: 25px;
+     font-size: 18px;
+     border-radius: 3px;
+     cursor: pointer;
+ }
 
+ .identificador {
+     width: 70px;
+ }
 
-/* estilos tabla */
+ .td-iconos {
+     align-items: left;
+     justify-content: space-between;
+ }
 
-.card {
-    display: flex;
-    margin-top: 10px;
-    margin-left: 15px;
-    margin-right: 15px;
-    border-left: 0;
-    border-right: 0;
-    border-top: 0;
-    margin-bottom: 10px;
-}
+ p-table tr td {
+     padding: -30px;
+ }
+ /* fin estilos tabla */
 
-.icono-table {
-    width: 25px;
-    height: 25px;
-    margin-right: 16px;
-    text-align: center;
-    line-height: 25px;
-    font-size: 18px;
-    border-radius: 3px;
-    cursor: pointer;
-}
+ @media screen and (max-width: 800px) and (min-width:180px) {
+     .div-boton {
+         margin-left: 15px;
+     }
+     .card {
+         border-left: 0;
+         border-right: 0;
+         border-top: 0;
+     }
+     p-table {
+         width: 100%;
+         font-size: .9em;
+     }
+     p-table tr {
+         display: flex;
+         flex-direction: column;
+         border-bottom: 1px solid grey;
+         /*   padding: 1em; */
+         /*  margin-bottom: 1em; */
+     }
+     p-table td[data-titulo] {
+         display: flex;
+     }
+     p-table td[data-titulo]::before {
+         content: attr( data-titulo);
+         width: 120px;
+         color: silver;
+         font-weight: bold;
+     }
+     p-table .header {
+         display: none;
+     }
+ }
 
-.identificador {
-    width: 70px;
-}
+ @media screen and (max-width: 520px) and (min-width:180px) {
+     .formulario .div-form .form {
+         width: 250px;
+         height: 30px;
+         margin-right: 10px;
+     }
+     .formulario .div-form .boton .icono-buscar {
+         color: #c7c7c7;
+         margin-top: 10;
+         transition: .5s;
+         font-size: 15px;
+         cursor: pointer;
+     }
+ }
 
-.td-iconos {
-    align-items: left;
-    justify-content: space-between;
-}
-
-
-/* fin estilos tabla */
-
-@media screen and (max-width: 800px) and (min-width:180px) {
-    .div-boton {
-        margin-left: 15px;
-    }
-    .card {
-        border-left: 0;
-        border-right: 0;
-        border-top: 0;
-    }
-    p-table {
-        width: 100%;
-        font-size: .9em;
-    }
-    p-table tr {
-        display: flex;
-        flex-direction: column;
-        border-bottom: 1px solid grey;
-        padding: 1em;
+ @media screen and (max-width: 350px) and (min-width:180px) {
+     .formulario .div-form .form {
+         width: 200px;
+         height: 30px;
+         margin-right: 10px;
+     }
+     p-table {
+         font-size: .9em;
+     }
+     /* p-table tr td {
         margin-bottom: 1em;
-    }
-    p-table td[data-titulo] {
-        display: flex;
-    }
-    p-table td[data-titulo]::before {
-        content: attr( data-titulo);
-        width: 120px;
-        color: silver;
-        font-weight: bold;
-    }
-    p-table .header {
-        display: none;
-    }
-}
+    } */
+     p-table td[data-titulo] {
+         display: flex;
+         font-size: .8em;
+     }
+     p-table td[data-titulo]::before {
+         content: attr( data-titulo);
+         color: silver;
+         font-weight: bold;
+     }
+ }
 
-@media screen and (max-width: 520px) and (min-width:180px) {
-    .formulario .div-form .form {
-        width: 250px;
-        height: 30px;
-        margin-right: 10px;
-    }
-    .formulario .div-form .boton .icono-buscar {
-        color: #c7c7c7;
-        margin-top: 10;
-        transition: .5s;
-        font-size: 15px;
-        cursor: pointer;
-    }
-}
+ @media screen and (max-width: 300px) and (min-width:180px) {
+     p-table tr td {
+         flex-direction: column;
+         padding: -5px;
+         /* margin-bottom: 1em; */
+     }
+     p-table td[data-titulo] {
+         display: flex;
+         font-size: .8em;
+     }
+ }
 
-@media screen and (max-width: 350px) and (min-width:180px) {
-    .formulario .div-form .form {
-        width: 200px;
-        height: 30px;
-        margin-right: 10px;
-    }
-    p-table {
-        font-size: .8em;
-    }
-    p-table tr td {
-        flex-direction: column;
-        padding: 1em;
-        margin-bottom: 1em;
-    }
-    p-table td[data-titulo] {
-        display: flex;
-        font-size: .8em;
-    }
-    p-table td[data-titulo]::before {
-        content: attr( data-titulo);
-        color: silver;
-        font-weight: bold;
-    }
-    p-table .header {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 270px) and (min-width:180px) {
-    .table-header input {
-        width: 170px;
-    }
-    .table-header {
-        margin-left: -15px;
-    }
-    .titulo-prin {
-        text-transform: uppercase;
-        margin-top: 0px;
-        margin-left: 15px;
-        font-size: 16px;
-    }
-    .formulario .div-form .form {
-        width: 135px;
-        height: 30px;
-        margin-right: 10px;
-    }
-    .formulario .div-form .boton .icono-buscar {
-        color: #c7c7c7;
-        margin-top: 10;
-        transition: .5s;
-        font-size: 15px;
-        cursor: pointer;
-    }
-}
+ @media screen and (max-width: 270px) and (min-width:180px) {
+     .table-header input {
+         width: 170px;
+     }
+     .table-header {
+         margin-left: -15px;
+     }
+     .titulo-prin {
+         text-transform: uppercase;
+         margin-top: 0px;
+         margin-left: 15px;
+         font-size: 16px;
+     }
+     .formulario .div-form .form {
+         width: 135px;
+         height: 30px;
+         margin-right: 10px;
+     }
+     .formulario .div-form .boton .icono-buscar {
+         color: #c7c7c7;
+         margin-top: 10;
+         transition: .5s;
+         font-size: 15px;
+         cursor: pointer;
+     }
+ }
