--- a/src/app/components/empresa/empresa.component.html
+++ b/src/app/components/empresa/empresa.component.html
@@ -56,6 +56,6 @@
             </div>
         </div>
     </div>
-    <p-toast></p-toast>
+    <p-toast [style]="{width: '80vw'}"></p-toast>
     <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
 </div>
