--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -23,7 +23,7 @@ hr {
 }
 
 .clase-navbar {
-    background-color: #01579b;
+    background-color: #1564bf;
     height: 52px;
     width: 100%;
     display: flex;
@@ -58,7 +58,7 @@ hr {
 .cont-menu {
     width: 100%;
     max-width: 200px;
-    background: #01579b;
+    background: #1564bf;
     height: 100%;
     position: absolute;
     z-index: 3;
@@ -89,7 +89,7 @@ hr {
 
 .cont-menu nav a:hover {
     border-left: 5px solid #c7c7c7;
-    background: #336eb6;
+    background: #3779c5;
 }
 
 .cont-menu .label-icono {
@@ -109,7 +109,7 @@ hr {
 }
 
 .cont-menu .label-icono .icono:hover {
-    background-color: #2f6cb6;
+    background-color: #3779c5;
     border-radius: 50px;
 }
 
@@ -157,7 +157,7 @@ fin estilos menu lateral */
 }
 
 .div-menu .label-menu:hover {
-    background-color: #2f6cb6;
+    background-color: #3779c5;
     color: #ffffff;
     border-radius: 50px;
 }
@@ -187,7 +187,7 @@ fin estilos menu lateral */
 }
 
 .login .div-login:hover {
-    background-color: #2f6cb6;
+    background-color: #3779c5;
     color: #ffffff;
     border-radius: 50px;
 }
