--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -50,6 +50,6 @@
         </p-table>
     </div>
 
-    <p-toast></p-toast>
+    <p-toast [style]="{width: '80vw'}"></p-toast>
     <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
 </div>
