--- a/src/app/components/clientes/clientes.component.css
+++ b/src/app/components/clientes/clientes.component.css
@@ -4,18 +4,23 @@
     box-sizing: border-box;
 }
 
+.contenedor-dos {
+    margin-top: -10px;
+    margin-bottom: 10px;
+}
+
 .titulo-prin {
     text-transform: uppercase;
     margin-top: 0px;
     margin-left: 15px;
-    padding-top: 10px;
 }
 
-.btn-client {
-    width: 150px;
-    height: 35px;
+.btn-emple {
+    width: 170px;
+    height: 30px;
     margin-left: 15px;
     font-size: 13px;
+    color: #ffffff;
     text-transform: uppercase;
 }
 
@@ -25,35 +30,38 @@
 }
 
 
-/* estilos dialogo agregar  */
+/* estilos buscador */
 
-.form-row label {
-    margin-bottom: 5px;
-    margin-top: 10px;
+.abc {
+    margin-right: 15px;
 }
 
-.titulo-h3 {
-    width: 100%;
-    height: 40px;
-    margin-bottom: -20px;
+.div-boton {
+    margin-left: 5px;
 }
 
-.titulo-h3 i {
-    margin-right: 6px;
+.imput-buscar {
+    height: 30px;
+    padding-left: 10px;
 }
 
-.identificador-detalle {
-    width: 30px;
+.boton-buscar {
+    width: 70px;
+    height: 30px;
+    color: #ffffff;
 }
 
-
-/* fin estilos dialogo agregar  */
+::placeholder {
+    padding-left: 5px;
+    color: rgb(163, 159, 159);
+}
 
 
 /* estilos tabla */
 
 .card {
-    margin-top: 20px;
+    display: flex;
+    margin-top: 10px;
     margin-left: 15px;
     margin-right: 15px;
     border-left: 0;
@@ -63,18 +71,18 @@
 }
 
 .icono-table {
-    width: 30px;
-    height: 30px;
-    margin-left: -10px;
+    width: 25px;
+    height: 25px;
     margin-right: 16px;
     text-align: center;
-    line-height: 30px;
-    font-size: 20px;
+    line-height: 25px;
+    font-size: 18px;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 .identificador {
-    width: 50px;
+    width: 70px;
 }
 
 .td-iconos {
@@ -82,13 +90,22 @@
     justify-content: space-between;
 }
 
+p-table tr td {
+    padding: -30px;
+}
+
 
 /* fin estilos tabla */
 
-
-/* responsive */
-
-@media screen and (max-width: 1000px) and (min-width:180px) {
+@media screen and (max-width: 800px) and (min-width:180px) {
+    .div-boton {
+        margin-left: 15px;
+    }
+    .card {
+        border-left: 0;
+        border-right: 0;
+        border-top: 0;
+    }
     p-table {
         width: 100%;
         font-size: .9em;
@@ -96,16 +113,16 @@
     p-table tr {
         display: flex;
         flex-direction: column;
-        border: 1px solid grey;
-        padding: 1em;
-        margin-bottom: 1em;
+        border-bottom: 1px solid grey;
+        /*   padding: 1em; */
+        /*  margin-bottom: 1em; */
     }
     p-table td[data-titulo] {
         display: flex;
     }
     p-table td[data-titulo]::before {
         content: attr( data-titulo);
-        width: 100px;
+        width: 120px;
         color: silver;
         font-weight: bold;
     }
@@ -114,55 +131,79 @@
     }
 }
 
-@media screen and (max-width: 1000px) and (min-width:180px) {
-    .table-detalle {
-        width: 100%;
-        font-size: .9em;
+@media screen and (max-width: 520px) and (min-width:180px) {
+    .formulario .div-form .form {
+        width: 250px;
+        height: 30px;
+        margin-right: 10px;
     }
-    .table-detalle tr {
-        display: flex;
-        flex-direction: column;
-        border: 1px solid grey;
-        padding: 1em;
-        margin-bottom: 1em;
-    }
-    .table-detalle td[data-detalle] {
-        display: flex;
-    }
-    .table-detalle td[data-detalle]::before {
-        content: attr( data-detalle);
-        width: 100px;
-        color: silver;
-        font-weight: bold;
-    }
-    .table-detalle .header1 {
-        display: none;
+    .formulario .div-form .boton .icono-buscar {
+        color: #c7c7c7;
+        margin-top: 10;
+        transition: .5s;
+        font-size: 15px;
+        cursor: pointer;
     }
 }
 
-@media screen and (max-width: 400px) and (min-width:180px) {
-    .table-detalle {
-        width: 100%;
-        font-size: .6em;
+@media screen and (max-width: 350px) and (min-width:180px) {
+    .formulario .div-form .form {
+        width: 200px;
+        height: 30px;
+        margin-right: 10px;
     }
-    .table-detalle tr {
+    p-table {
+        font-size: .9em;
+    }
+    /* p-table tr td {
+     margin-bottom: 1em;
+ } */
+    p-table td[data-titulo] {
         display: flex;
-        flex-direction: column;
-        border: 1px solid grey;
-        padding: 1em;
-        margin-bottom: 1em;
+        font-size: .8em;
     }
-    .table-detalle td[data-detalle] {
-        display: flex;
-    }
-    .table-detalle td[data-detalle]::before {
-        content: attr( data-detalle);
-        width: 100px;
+    p-table td[data-titulo]::before {
+        content: attr( data-titulo);
         color: silver;
-        font-size: .6em;
         font-weight: bold;
     }
-    .table-detalle .header1 {
-        display: none;
+}
+
+@media screen and (max-width: 300px) and (min-width:180px) {
+    p-table tr td {
+        flex-direction: column;
+        padding: -5px;
+        /* margin-bottom: 1em; */
+    }
+    p-table td[data-titulo] {
+        display: flex;
+        font-size: .8em;
+    }
+}
+
+@media screen and (max-width: 270px) and (min-width:180px) {
+    .table-header input {
+        width: 170px;
+    }
+    .table-header {
+        margin-left: -15px;
+    }
+    .titulo-prin {
+        text-transform: uppercase;
+        margin-top: 0px;
+        margin-left: 15px;
+        font-size: 16px;
+    }
+    .formulario .div-form .form {
+        width: 135px;
+        height: 30px;
+        margin-right: 10px;
+    }
+    .formulario .div-form .boton .icono-buscar {
+        color: #c7c7c7;
+        margin-top: 10;
+        transition: .5s;
+        font-size: 15px;
+        cursor: pointer;
     }
 }
