--- a/src/app/components/factura/factura.component.css
+++ b/src/app/components/factura/factura.component.css
@@ -21,9 +21,11 @@ h4 {
     text-transform: uppercase;
 }
 
+
+/*
 .formulario {
     justify-content: space-between;
-}
+} */
 
 label {
     margin-left: 0px;
