--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <div class="contenedor">
+
     <nav class="navbar navbar-light  clase-navbar ">
         <div class="container-fluid">
             <div class="btn-menu div-menu">
@@ -88,9 +89,10 @@
 
             <div class=" login">
                 <div class="div-login">
-                    <label for=""><i class="pi pi-sign-in iconologin"></i></label>
+                    <label for=""><i class="pi pi-sign-in iconologin" routerLink="/login"></i></label>
                 </div>
             </div>
+
         </div>
     </nav>
 </div>
