--- a/src/app/components/productos/productos.component.css
+++ b/src/app/components/productos/productos.component.css
@@ -196,3 +196,21 @@
         cursor: pointer;
     }
 }
+
+.p-text-center{
+  text-align: center;
+}
+
+.botonesConfir{
+  display: inline-flex;
+}
+
+.buttonSuccess{
+  width: 120px;
+  height: 30px;
+}
+
+.buttonSecondary{
+  width: 120px;
+  height: 30px;
+}
