--- a/src/app/components/factura/factura.component.html
+++ b/src/app/components/factura/factura.component.html
@@ -1,5 +1,7 @@
 <div class="contenedor">
-    <h2>Facturación de servicio</h2>
+    <div>
+        <h2>Facturación de servicio</h2>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <form name="form" id="form" novalidate autocomplete="off" #form="ngForm">
@@ -122,15 +124,15 @@
                 </div>
 
                 <div class="btnform-servicio">
-                    <button (click)="agregarDetalle(form)" type="button" class="btn btn-outline-primary btn-servicio">Agregar</button>
-                    <button type="button" class="btn btn-outline-secondary btn-servicio">Guardar</button>
+                    <button (click)="agregarDetalle(form)" type="button" class="btn btn-primary btn-servicio">Agregar</button>
+                    <button type="button" class="btn btn-secondary btn-servicio">Guardar</button>
                 </div>
             </form>
         </div>
 
 
         <div class="card">
-            <p-table [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
+            <p-table [(value)]="detalleFactura" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" [rowHover]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
                 <ng-template pTemplate="header">
                     <tr class="header">
                         <th class="identificador"> # </th>
@@ -142,30 +144,31 @@
                         <th></th>
                     </tr>
                 </ng-template>
-                <ng-template pTemplate="body">
+                <ng-template pTemplate="body" let-detalleFactura>
                     <tr>
-                        <td data-titulo="#"> 1</td>
-                        <td data-titulo="Descripción"> 2</td>
-                        <td data-titulo="Peso"> 3</td>
-                        <td data-titulo="Tipo"> 4</td>
-                        <td data-titulo="Cantidad"> 5</td>
-                        <td data-titulo="Total"> 6</td>
+                        <td data-titulo="#"> {{ detalleFactura.id }} </td>
+                        <td data-titulo="Descripción"> {{ detalleFactura.descripcion }} </td>
+                        <td data-titulo="Peso"> {{ detalleFactura.pesoXlibras }} </td>
+                        <td data-titulo="Tipo"> {{ detalleFactura.tipoExtintor }} </td>
+                        <td data-titulo="Cantidad"> {{ detalleFactura.cantidad }} </td>
+                        <td data-titulo="Total"> {{ detalleFactura.valor | currency }} </td>
                         <td class="td-iconos">
                             <i class="pi pi-pencil btn-outline-primary icono-table"></i>
                             <i class="pi pi-trash btn-outline-danger icono-table"></i>
                             <i class="pi pi-list btn-outline-success icono-table"></i>
                         </td>
                     </tr>
-                    <tr>
+                    <!--   <tr>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td>Total</td>
                         <td>$44.000</td>
-                    </tr>
+                    </tr> -->
                 </ng-template>
             </p-table>
         </div>
     </div>
+
 </div>
