--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -43,7 +43,8 @@
                     <td data-titulo="Producto"> {{ producto.idTipoExtintor }} </td>
                     <td class="td-iconos">
                         <i (click)="showPositionDialog(producto)" class="pi pi-pencil btn-outline-primary icono-table"></i>
-                        <i (click)="eliminarProducto(producto)" class="pi pi-trash btn-outline-danger icono-table"></i>
+                        <i (click)="showConfirm(producto)" class="pi pi-trash btn-outline-danger icono-table"></i>
+                        <!-- <i (click)="eliminarProducto2(producto)" class="pi pi-trash btn-outline-danger icono-table"></i> -->
                     </td>
                 </tr>
             </ng-template>
@@ -52,4 +53,24 @@
 
     <p-toast [style]="{width: '80vw'}"></p-toast>
     <p-confirmDialog [style]="{width: '50vw'}" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text"></p-confirmDialog>
+
+    <p-toast position="top-center" (onClose)="onReject()" key="c"  [baseZIndex]="5000">
+      <ng-template let-message pTemplate="message">
+          <div class="p-flex p-flex-column contenConfirmar" style="flex: 1">
+              <div class="p-text-center">
+                  <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+                  <h4>{{message.summary}}</h4>
+                  <p>{{message.detail}}</p>
+              </div>
+              <div class="row ">
+                  <div class="col-md-6">
+                      <button type="button" pButton (click)="eliminarProducto(producto)" label="Yes" class="p-button-success buttonSuccess"></button>
+                  </div>
+                  <div class="col-md-6">
+                      <button type="button" pButton (click)="onReject()" label="No" class="p-button-secondary buttonSecondary"></button>
+                  </div>
+              </div>
+          </div>
+      </ng-template>
+  </p-toast>
 </div>
